--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+:root{
+    --branco:#FFFFFF;
+    --cinza:#F9F9F9;
+    --azul: #167BF7;
+    --fundo: #00030C;
+}
+
+body{
+    background-color: var(--fundo); 
+    color: var(--branco);
+}
+*{
+    margin: 0;
+    padding: 0;
+}
